# update_requirements

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: wheel.yml
src/update_requirements/: __main__.py
